# velora-tracker

./: .gitignore  README.md  capacitor.config.json  index.html  package-lock.json  package.json  playwright.config.cjs  supabase-schema.sql  vercel.json  vite.config.js
android/: capacitor.settings.gradle
android/app/: build.gradle
public/: loaderio-a883b32de0d5043cf70898a32bc1149f.txt
public/downloads/: VeloraTracker-1.0.0.msi
src/: ai-coo.css  ai-os.css  communication.css  ecosystem.css  halo.css  knowledge.css  launch-readiness.css  main.jsx  marketplace.css  portals.css  productization.css  projects.css  styles.css  supabaseClient.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AiCooCommandCenter.jsx  AiOperatingSystemCenter.jsx  (+14 more)
supabase/: phase10-productization.sql  phase11-hr-workforce.sql  phase12-payroll-compensation.sql  phase13-theme-studio.sql  phase14-server-control-center.sql  phase15-multi-server-network.sql  phase16-communication-center.sql  phase17-project-task-management.sql  phase18-knowledge-hub.sql  phase19-customer-supplier-portals.sql  phase2-enterprise-core.sql  phase2-procurement-base-bootstrap.sql  phase2-procurement-id-repair.sql  phase2-procurement-orders-bootstrap.sql  phase20-ecosystem-marketplace.sql  phase21-ai-operating-system.sql  phase5-time-machine.sql  phase6-strategic-war-room.sql  phase7-ai-coo.sql  phase8-business-ecosystem.sql  phase9-launch-readiness.sql
tests/: load-reporter.cjs  load-users.example.json
work/: start-vite.cjs
(+26 files in other folders)
