[package]
name = "velora-tracker"
version = "1.0.0"
description = "Velora Tracker desktop application"
authors = ["Velora Motors"]
edition = "2021"

[lib]
name = "velora_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
